# ai-medical-coding

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/api/: router.py  schemas.py
backend/auth/: router.py  schemas.py  security.py
backend/config/: config.py
backend/db/: database.py  models.py
backend/ingestion/: ingest.py  parser.py
backend/rag/: retrieval.py
backend/tests/: eval_dataset.json  run_evals.py  test_auth.py  test_e2e.py  test_parser.py  test_security.py  test_workflow.py
backend/workflows/: graph.py  orchestrator.py  security.py
backend/workflows/guardrails_config/: config.yml  discussions.co
frontend/: Dockerfile
frontend/src/app/: page.tsx
frontend/src/app/coder/: page.tsx
frontend/src/app/doctor/: page.tsx
