[project]
name = "medical-coding-ai"
version = "0.1.0"
description = "AI Medical Coding System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.138.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langfuse>=2.0.0,<3.0.0",
    "langgraph>=1.2.6",
    "nemoguardrails>=0.22.0",
    "openevals>=0.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.25.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
icd-ingest = "backend.ingestion.ingest:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
